# ArmorStand

./: IkTargetComponent.kt  MODULE.bazel  README.md  maven_install.json  properties.bzl
.github/workflows/: build.yml
blazerod/: BUILD.bazel
blazerod/example/ball_block/: BUILD.bazel
blazerod/example/ball_block/src/main/java/top/fifthlight/blazerod/example/ballblock/: BallBlockMod.java
blazerod/model/: BUILD.bazel  model_info_jar.bzl
blazerod/model/model-assimp/: BUILD.bazel
blazerod/model/model-base/src/main/kotlin/top/fifthlight/blazerod/model/animation/: AnimationContext.kt
blazerod/model/model-bedrock/: BUILD.bazel
blazerod/model/model-bedrock/src/main/kotlin/top/fifthlight/blazerod/model/bedrock/: BedrockModelJsonLoader.kt  BedrockModelLoader.kt  GsonUtil.kt
blazerod/model/model-bedrock/src/main/kotlin/top/fifthlight/blazerod/model/bedrock/animation/: BedrockAnimationState.kt
blazerod/model/model-formats/: BUILD.bazel
blazerod/model/model-gltf/: BUILD.bazel
blazerod/model/model-pmd/: BUILD.bazel
blazerod/model/model-pmx/: BUILD.bazel
blazerod/model/model-vmd/: BUILD.bazel
blazerod/render/: BUILD.bazel
blazerod/render/api/: BUILD.bazel
blazerod/render/api/animation/: BUILD.bazel
blazerod/render/api/loader/: BUILD.bazel
blazerod/render/api/render/: BUILD.bazel
blazerod/render/main/runtime/: BUILD.bazel  ModelInstanceImpl.kt  RenderSceneImpl.kt
blazerod/render/main/runtime/load/: BUILD.bazel
blazerod/render/main/runtime/node/: TransformMap.kt  UpdatePhase.kt
blazerod/render/main/runtime/node/component/: IkTargetComponent.kt
blazerod/render/main/runtime/renderer/: BUILD.bazel  ComputeShaderTransformRenderer.kt  RendererImpl.kt
blazerod/render/src/expect/: BUILD.bazel
blazerod/render/src/fabric/: BUILD.bazel
blazerod/render/src/fabric/kotlin/top/fifthlight/blazerod/: BlazeRodFabric.kt
blazerod/render/src/fabric/resources/: fabric.mod.json
blazerod/render/src/game/: BUILD.bazel
blazerod/render/src/main/: BUILD.bazel
blazerod/render/src/main/java/top/fifthlight/blazerod/extension/: GpuDeviceExt.java
blazerod/render/src/main/java/top/fifthlight/blazerod/mixin/: RenderSystemMixin.java
blazerod/render/src/main/java/top/fifthlight/blazerod/mixin/gl/: GlCommandEncoderMixin.java
blazerod/render/src/main/java/top/fifthlight/blazerod/systems/: ComputePass.java
blazerod/render/src/main/kotlin/top/fifthlight/blazerod/: BlazeRod.kt
blazerod/render/src/main/kotlin/top/fifthlight/blazerod/animation/: AnimationChannelItem.kt  AnimationItem.kt  AnimationLoader.kt
blazerod/render/src/main/kotlin/top/fifthlight/blazerod/animation/context/: EntityAnimationContext.kt  PlayerEntityAnimationContext.kt
blazerod/render/src/main/kotlin/top/fifthlight/blazerod/event/: Event.kt  RenderEvents.kt
blazerod/render/src/main/kotlin/top/fifthlight/blazerod/model/renderer/: ComputeShaderTransformRenderer.kt
blazerod/render/src/main/kotlin/top/fifthlight/blazerod/render/: IrisApis.kt
blazerod/render/src/main/kotlin/top/fifthlight/blazerod/runtime/: ModelInstance.kt  RenderScene.kt  RenderTask.kt
blazerod/render/src/main/kotlin/top/fifthlight/blazerod/runtime/data/: LocalMatricesBuffer.kt  MorphTargetBuffer.kt  RenderSkinBuffer.kt
blazerod/render/src/main/kotlin/top/fifthlight/blazerod/runtime/load/: ModelLoadInfo.kt  ModelLoader.kt  ModelPreprocessor.kt  ModelResourceLoader.kt  SceneReconstructor.kt
blazerod/render/src/main/kotlin/top/fifthlight/blazerod/runtime/node/: RenderNode.kt  TransformMap.kt  UpdatePhase.kt
blazerod/render/src/main/kotlin/top/fifthlight/blazerod/runtime/node/component/: Camera.kt  IkTarget.kt  InfluenceSource.kt  Joint.kt  Primitive.kt  RenderNodeComponent.kt
blazerod/render/src/main/kotlin/top/fifthlight/blazerod/runtime/renderer/: ComputeShaderTransformRenderer.kt  CpuTransformRenderer.kt  Renderer.kt  VertexShaderTransformRenderer.kt
blazerod/render/src/main/kotlin/top/fifthlight/blazerod/runtime/resource/: CameraTransform.kt  RenderCamera.kt  RenderExpression.kt  RenderMaterial.kt  RenderPrimitive.kt  RenderTexture.kt
blazerod/render/src/main/kotlin/top/fifthlight/blazerod/runtime/uniform/: InstanceDataUniformBuffer.kt  MorphDataUniformBuffer.kt  SkinModelIndicesUniformBuffer.kt  UniformBuffer.kt  UnlitDataUniformBuffer.kt
blazerod/render/src/main/kotlin/top/fifthlight/blazerod/util/: ObjectPool.kt  RefCount.kt
blazerod/render/src/neoforge/: BUILD.bazel
blazerod/render/src/neoforge/kotlin/top/fifthlight/blazerod/: BlazeRodNeoForge.kt
blazerod/render/src/test/: BUILD.bazel
blazerod/render/src/test/kotlin/top/fifthlight/blazerod/test/model/node/: TransformMapTest.kt
game/: BUILD.bazel
mod/: BUILD.bazel
mod/src/client/: BUILD.bazel
mod/src/client/java/top/fifthlight/armorstand/mixin/: FrustumMixin.java
mod/src/client/kotlin/top/fifthlight/armorstand/: PlayerRenderer.kt
mod/src/client/kotlin/top/fifthlight/armorstand/config/: GlobalConfig.kt
mod/src/client/kotlin/top/fifthlight/armorstand/event/: ScreenEvents.kt
mod/src/client/kotlin/top/fifthlight/armorstand/state/: ModelController.kt  ModelInstanceManager.kt
mod/src/client/kotlin/top/fifthlight/armorstand/ui/model/: AnimationViewModel.kt
mod/src/client/kotlin/top/fifthlight/armorstand/ui/screen/: RendererSelectScreen.kt
mod/src/client/kotlin/top/fifthlight/armorstand/util/: RendererManager.kt
mod/src/fabric_client/: BUILD.bazel
mod/src/fabric_client/kotlin/top/fifthlight/armorstand/: ArmorStandFabricClient.kt
mod/src/fabric_main/: BUILD.bazel
mod/src/main/: BUILD.bazel
mod/src/neoforge_client/: BUILD.bazel
mod/src/neoforge_main/: BUILD.bazel
private/: maven_coordinate.bzl
repo/: neoforge.bzl  neoform.bzl
repo/neoform/: java_source_info.bzl
repo/neoform/pin_generator/: PinGenerator.java
repo/neoform/rule/: inject_zip_content.bzl  patch_zip_content.bzl
rule/: convert_access_widener.bzl  merge_library.bzl
rule/expect_actual_tools/processor/java/actual/: ActualAnnotationProcessor.java
rule/expect_actual_tools/processor/lib/: ActualData.java
rule/merge_expect_actual_jar/: ExpectActualMerger.java
(+1 files in other folders)
