load("//rule:remap_jar.bzl", "remap_jar")

alias(
    name = "render_fabric_unmapped",
    visibility = ["//visibility:public"],
    actual = "//blazerod/render/src/fabric:fabric_unmapped",
)

alias(
    name = "render_fabric_unmapped_merged",
    visibility = ["//visibility:public"],
    actual = "//blazerod/render/src/fabric:fabric_unmapped_merged",
)

remap_jar(
    name = "render_fabric_merged",
    visibility = ["//visibility:public"],
    classpath = ["//game:remapped_client_named"],
    from_namespace = "named",
    inputs = [":render_fabric_unmapped_merged"],
    mapping = "//game:merged_mapping",
    mixin = True,
    to_namespace = "intermediary",
)

test_suite(
    name = "tests",
    tests = ["//blazerod/render/src/test:standalone_tests"],
)
