load("@rules_java//java:defs.bzl", "java_library")
load("@rules_kotlin//kotlin:jvm.bzl", "kt_jvm_library", "kt_jvm_test")
load("//blazerod/model:model_info_jar.bzl", "model_info_jar")
load("//rule:merge_jar.bzl", "merge_jar")

model_info_jar(
    name = "mod_info_json",
    substitutions = {
        "${mod_id}": "blazerod-model-gltf",
        "${name}": "BlazeRod model GLTF",
        "${description}": "GLTF & VRM model loading support.",
    },
)

kt_jvm_library(
    name = "model-gltf",
    srcs = glob(["src/main/kotlin/**/*.kt"]),
    resource_jars = [
        ":mod_info_json",
        "//blazerod:icon",
    ],
    resources = glob(
        include = ["src/main/resources/**"],
        exclude = ["src/main/resources/fabric.mod.json"],
    ),
    visibility = ["//visibility:public"],
    deps = [
        "//:kotlin_serialization",
        "//blazerod/model/model-base",
        "@maven//:org_jetbrains_kotlinx_kotlinx_serialization_json",
    ],
)

java_library(
    name = "runfile_dummy_lib",
    srcs = [
        "src/test/java/top/fifthlight/blazerod/model/gltf/test/RunfileDummy.java"
    ],
    deps = [
        "@bazel_tools//tools/java/runfiles",
    ],
)

kt_jvm_test(
    name = "glb_load_test",
    srcs = glob(
        include = [
            "src/test/kotlin/**/*.kt",
            "src/test/java/**/*.java",
        ],
        exclude = [
            "src/test/java/top/fifthlight/blazerod/model/gltf/test/RunfileDummy.java"
        ],
    ),
    args = [
        "execute",
        "--select-class",
        "top.fifthlight.blazerod.model.gltf.test.GlbLoadTest",
    ],
    associates = [":model-gltf"],
    main_class = "org.junit.platform.console.ConsoleLauncher",
    jvm_flags = [
        "-Dalicia_solid_path=$(rlocationpath //blazerod/model/example-models:alicia_solid_vrm)",
        "-Darmorstand_path=$(rlocationpath //blazerod/model/example-models:armorstand_vrm)",
        "-Dinterpolation_test_path=$(rlocationpath //blazerod/model/example-models:interpolation_test_glb)",
    ],
    data = [
        "//blazerod/model/example-models:alicia_solid_vrm",
        "//blazerod/model/example-models:armorstand_vrm",
        "//blazerod/model/example-models:interpolation_test_glb",
    ],
    runtime_deps = [
        "@maven//:org_junit_jupiter_junit_jupiter_engine",
        "@maven//:org_junit_platform_junit_platform_console",
    ],
    deps = [
        "@maven//:org_jetbrains_kotlin_kotlin_test_junit5",
        "@maven//:org_junit_jupiter_junit_jupiter_api",
        ":runfile_dummy_lib",
    ],
)
