load("@rules_kotlin//kotlin:jvm.bzl", "kt_jvm_library", "kt_jvm_test")
load("//blazerod/model:model_info_jar.bzl", "model_info_jar")
load("//rule:merge_jar.bzl", "merge_jar")

model_info_jar(
    name = "mod_info_json",
    substitutions = {
        "${mod_id}": "blazerod-model-pmd",
        "${name}": "BlazeRod model PMD",
        "${description}": "PMD model file loading support.",
    },
)

kt_jvm_library(
    name = "model-pmd",
    srcs = glob(["src/main/kotlin/**/*.kt"]),
    resource_jars = [
        ":mod_info_json",
        "//blazerod:icon",
    ],
    resources = glob(
        include = ["src/main/resources/**"],
        exclude = ["src/main/resources/fabric.mod.json"],
    ),
    visibility = ["//visibility:public"],
    deps = [
        "//blazerod/model/model-base",
    ],
)
