load("@bazel_skylib//rules:expand_template.bzl", "expand_template")
load("//rule:merge_library.bzl", "kt_merge_library", "merge_library_jar")
load("//:properties.bzl", "blazerod_version")

expand_template(
    name = "api_info",
    template = "BlazeRodApi.template.kt",
    out = "BlazeRodApi.kt",
    substitutions = {
        "${version}": blazerod_version,
    }
)

kt_merge_library(
    name = "api",
    srcs = [":api_info"],
    merge_deps = [
        "//blazerod/render/api/animation",
        "//blazerod/render/api/event",
        "//blazerod/render/api/loader",
        "//blazerod/render/api/refcount",
        "//blazerod/render/api/resource",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//blazerod/model/model-base",
        "//blazerod/render/game:remapped_client_access_widened_named",
        "@maven//:org_joml_joml",
    ],
)
