load("//rule:merge_library.bzl", "kt_merge_library")

kt_merge_library(
    name = "runtime",
    srcs = glob(["**/*.kt"]),
    actual = True,
    merge_deps = [
        "//blazerod/render/api/resource",
        "//blazerod/render/api/refcount",
        "//blazerod/render/main:main_base",
        "//blazerod/render/main/mixin",
        "//blazerod/render/main/extension",
        "//blazerod/render/main/util/cowbuffer",
        "//blazerod/render/main/util/iterator",
        "//blazerod/render/main/util/dispatchers",
        "//blazerod/render/main/util/blaze3d",
        "//blazerod/render/main/util/bitmap",
        "//blazerod/render/main/util/gpushaderpool",
        "//blazerod/render/main/layout",
        "//blazerod/render/main/util/uniform",
    ],
    visibility = ["//blazerod/render:__subpackages__"],
    deps = [
        "//blazerod/model/model-base",
        "//blazerod/render/game:remapped_client_access_widened_named",
        "@maven//:org_jetbrains_kotlin_kotlin_stdlib",
        "@maven//:org_jetbrains_kotlinx_kotlinx_coroutines_core",
        "@minecraft//:1.21.8_client_libraries",
    ],
)
