load("//rule:merge_library.bzl", "kt_merge_library")

kt_merge_library(
    name = "expect",
    visibility = ["//blazerod/render:__subpackages__"],
    srcs = glob(
        include = [
            "kotlin/**/*.kt",
            "java/**/*.java",
        ],
        allow_empty = True,
    ),
    expect = True,
    deps = [
        "//blazerod/render/src/game:remapped_client_access_widened_named",
    ],
)
