load("@rules_java//java:defs.bzl", "java_library")
load("//rule:apply_access_widener.bzl", "apply_access_widener")
load("//rule:extract_access_widener.bzl", "extract_access_widener")
load("//rule:decompile_jar.bzl", "decompile_jar")

extract_access_widener(
    name = "access_widener_dep_named",
    inputs = ["//blazerod/render/src/fabric:remapped_deps"],
)

apply_access_widener(
    name = "remapped_client_access_widened_named",
    visibility = ["//blazerod/render:__subpackages__"],
    srcs = [
        "blazerod.accesswidener",
        ":access_widener_dep_named",
    ],
    input = "//game:remapped_client_named",
    neverlink = True,
)

java_library(
    name = "access_widener",
    visibility = ["//blazerod/render:__subpackages__"],
    resources = ["blazerod.accesswidener"],
    resource_strip_prefix = "blazerod/render/src/game",
)
