load("//:properties.bzl", "game_version")
load("@rules_kotlin//kotlin:jvm.bzl", "kt_jvm_test")

kt_jvm_test(
    name = "standalone_tests",
    srcs = [
        "kotlin/top/fifthlight/blazerod/test/StandaloneTest.kt",
        "kotlin/top/fifthlight/blazerod/test/layout/Std140Test.kt",
        "kotlin/top/fifthlight/blazerod/test/layout/Std430Test.kt",
        "kotlin/top/fifthlight/blazerod/test/model/node/TransformMapTest.kt",
    ],
    args = [
        "execute",
        "--select-class",
        "top.fifthlight.blazerod.test.StandaloneTest",
    ],
    associates = ["//blazerod/render/src/main"],
    main_class = "org.junit.platform.console.ConsoleLauncher",
    runtime_deps = [
        "@maven//:org_junit_jupiter_junit_jupiter_engine",
        "@maven//:org_junit_platform_junit_platform_console",
        "@maven//:org_junit_platform_junit_platform_suite_engine",
    ],
    deps = [
        "//blazerod/model/model-formats",
        "//blazerod/render/src/game:remapped_client_access_widened_named",
        "@minecraft//:%s_client_libraries" % game_version,
        "@maven//:org_jetbrains_kotlin_kotlin_test_junit5",
        "@maven//:org_junit_jupiter_junit_jupiter_api",
        "@maven//:org_junit_platform_junit_platform_suite_api",
    ],
)
