load("//rule:merge_library.bzl", "kt_merge_library")

kt_merge_library(
    name = "renderer",
    srcs = glob(["**/*.kt"]),
    actual = True,
    merge_deps = [
        "//blazerod/render/api/resource",
        "//blazerod/render/api/render",
        "//blazerod/render/main/runtime",
    ],
    visibility = ["//blazerod/render:__subpackages__"],
    exports = [
        "//blazerod/render/api",
        "//blazerod/render/api/loader",
    ],
    deps = [
        "//blazerod/render/game:remapped_client_access_widened_named",
        "@maven//:org_jetbrains_kotlin_kotlin_stdlib",
        "@maven//:org_jetbrains_kotlinx_kotlinx_coroutines_core",
        "@minecraft//:1.21.8_client_libraries",
    ],
)
